tests/NormalTests/paczka1/fuzzy1/67768645.err
Error in line 8: t2HYKRTCStl S477 65,7
Error in line 15: zam6een S477 35,8
Error in line 21: EdoNIIp N254 11,0
Error in line 14: EdoAIIp A318 9,5
Error in line 18: zam6een A318 45,0
Error in line 28: t2HYKRTCStl A254 64,9
Error in line 26: EdoAIIp A254 46,6
Error in line 33: EdoAIIp S788 85,6
